Fixed bug with overlapping menu on popup.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -579,7 +579,8 @@ div.page {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.2s linear, visibility 0.2s linear; }
+  transition: opacity 0.2s linear, visibility 0.2s linear;
+  z-index: 1; }
   .pop-up.active .content, .pop-up:target .content {
     transform: scale(1); }
   .pop-up .content {
