--- a/assets/scss/components/_pop-up.scss
+++ b/assets/scss/components/_pop-up.scss
@@ -13,6 +13,7 @@
 		transition:
 			opacity $fastSpeed linear,
 			visibility $fastSpeed linear;
+		z-index: 1;
 		@extend %hidden;
 		&.active,
 		&:target{
